# cassandra-sys-rs

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cassandra.h  rustfmt.toml
.github/workflows/: build.yml
examples/: async.rs  basic.rs  batch.rs  bind_by_name.rs  cloud.rs  collections.rs  logging.rs  maps.rs  named_parameters.rs  paging.rs  prepared.rs  schema_meta.rs  simple.rs  ssl.rs  tuple.rs  udt.rs  uuid.rs
examples/disabled/: callbacks.rs  perf.rs
examples/examples_util/: mod.rs
scripts/: install_ubuntu_packages.sh
src/: cassandra.rs  cassandra.rs.bk  error.rs  ffi_util.rs  lib.rs  min_tls_version.rs
src/examples/: async.rs  basic.rs  batch.rs  bind_by_name.rs  collections.rs  examples_util.rs  logging.rs  maps.rs  named_parameters.rs  paging.rs  perf.rs  prepared.rs  schema_meta.rs  simple.rs  ssl.rs  tuple.rs  udt.rs  uuid.rs
