[package]
description = "A bindgen-generated Rust wrapper around the DataStax Cassandra C++ driver plus working examples. You probably want to use the \"cassandra-cpp\" crate which provides a safe wrapper."
documentation = "https://docs.rs/cassandra-sys-rs"
# no homepage yet
repository = "https://github.com/cassandra-rs/cassandra-sys-rs"
readme = "README.md"
keywords = ["Cassandra", "binding", "CQL", "client", "database" ]
categories = [ "api-bindings", "database", "external-ffi-bindings" ]
license = "Apache-2.0"
name = "cassandra-cpp-sys"
version = "1.1.1"
authors = ["Keith Wansbrough <keithw@lochan.org>"]
links = "cassandra"
build = "build.rs"

[lib]
name = "cassandra_cpp_sys"

[dev-dependencies]
log = "0.4"
env_logger = "0.11"

[features]
default = []
early_access_min_tls_version = []
